<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardElevation="@dimen/cardview_default_elevation"
    card_view:cardCornerRadius="@dimen/cardview_default_radius">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_card_view">
                <ImageView
                    android:id="@+id/ivDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete"
                    />
                <TextView
                    android:id="@+id/tvTitleCounter"
                    android:layout_marginLeft="@dimen/padding_text_view"
                    android:layout_marginStart="@dimen/padding_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                <ImageView
                    android:id="@+id/ivMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_minus"/>

                <TextView
                    android:id="@+id/tvCounter"
                    android:layout_marginLeft="@dimen/padding_text_view"
                    android:layout_marginRight="@dimen/padding_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                <ImageView
                    android:id="@+id/ivAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add"/>
        </LinearLayout>
</android.support.v7.widget.CardView>